Add share-mail button

--- a/app/partials/desktop/events/general.html
+++ b/app/partials/desktop/events/general.html
@@ -80,10 +80,9 @@
     </div>
  -->  </div>
   <div class="share-box-bottom">
-<!--     <div class="share-mail">
-      <p>メール</p>
+    <div class="share-mail">
+      <a Href="mailto:?subject={{event.title}}のお知らせ&body=イベントを作成しました。予定入力をお願いします。%0d%0a{{event.getUrl()}}%0d%0a%0d%0a【{{event.title}}】%0d%0a{{event.description}}"><p>メール</p></a>
     </div>
- -->
     <div class="share-twitter">
       <a href="https://twitter.com/intent/tweet" class="twitter-mention-button" data-lang="ja" data-text="イベントを作成しました！参加者は予定入力をお願いします(^-^) {{event.getUrl()}}">ツイッターで送る</a>
     </div>
