--- a/app/partials/desktop/create-event/confirmation.html
+++ b/app/partials/desktop/create-event/confirmation.html
@@ -55,7 +55,7 @@
 
 <div class="organizer-area">
   <div class="gide-arrow"></div>
-  <div class="share-box-left">
+  <div class="share-box-top">
     <div class="share-h">
       <p>下記URLをコピーして参加者に共有してください。</p>
     </div>
@@ -67,10 +67,10 @@
       Copied!
     </div> -->
   </div>
-  <div class="share-box-right">
-<!--     <div class="share-mail">
-      <img src="images/desktop/btn-mail.png" alt="">
-    </div> -->
+  <div class="share-box-bottom">
+    <div class="share-mail">
+      <a Href="mailto:?subject={{event.title}}のお知らせ&body=イベントを作成しました。予定入力をお願いします。%0d%0a{{event.getUrl()}}%0d%0a%0d%0a【{{event.title}}】%0d%0a{{event.description}}"><p>メール</p></a>
+    </div>
     <div class="share-twitter">
       <a href="https://twitter.com/intent/tweet" class="twitter-mention-button" data-lang="ja" data-text="イベントを作成しました！参加者は予定入力をお願いします(^-^) {{event.getUrl()}}">ツイッターで送る</a>
     </div>
