--- a/app/styles/partials/_desktop.scss
+++ b/app/styles/partials/_desktop.scss
@@ -847,7 +847,8 @@ hr {
     height: auto;
     background: #CCCCCC;
     margin-top: 20px;
-    margin-left: 130px;
+    margin-left: auto;
+    margin-right: auto;
     padding-top: 5px;
     padding-bottom: 5px;
     .share-h {
@@ -890,8 +891,10 @@ hr {
     }
   }
   .share-box-bottom {
+    width: 300px;
     margin-top: 30px;
-    margin-left: 290px;
+    margin-left: auto;
+    margin-right: auto;
     .share-mail {
       margin-left: 20px;
       float: left;
