--- a/app/styles/partials/_desktop.scss
+++ b/app/styles/partials/_desktop.scss
@@ -833,13 +833,14 @@ hr {
 .organizer-area {
   margin-top: 30px;
   h2 {
-    width: 220px;
+    width: 150px;
     margin-left: auto;
     margin-right: auto;
     background: image-url("common/icon-person-black.png") no-repeat;
-    padding-bottom: 3px;
+    padding-bottom: 2px;
     font-size: 25px;
-    text-align: center;
+    text-align: left;
+    padding-left:30px;
   }
   .share-box-top {
     position: relative;
