--- a/app/partials/feature-boxes/fastest.html
+++ b/app/partials/feature-boxes/fastest.html
@@ -1,3 +1,3 @@
 <p class="center"><img src="images/common/icon-timer.png" alt="世界最速"></p>
-<p>MeetAppは<b>圧倒的に早い</b>スケジュール調整が可能です。その速さは他のあらゆるツールと比べものになりません。</p>
-<p>旅行、デート、ミーティング、取引先との打ち合わせ……。これらの日程を決めるとき、効率の良い時間の使い方をしたい人は、ぜひ一度試してみてください。</p>
+<p>MeetAppなら<b>圧倒的に早い</b>スケジュール調整ができます。その速さは、他のあらゆるツールと比べものになりません。</p>
+
