--- a/app/partials/feature-boxes/intuitive.html
+++ b/app/partials/feature-boxes/intuitive.html
@@ -1,2 +1,2 @@
-<p class="center"><img src="images/common/icon-intuitive.png" alt="直感的操作"></p>
+<p class="center"><img src="images/common/icon-intuitive.png" alt="直感的な操作"></p>
 <p>MeetAppは直感的に操作できるデザインを採用しています。<b>スワイプするだけのシンプルな操作</b>は分かりやすい上に、癖になります。</p>
