--- a/app/partials/feature-boxes/ubiquitous.html
+++ b/app/partials/feature-boxes/ubiquitous.html
@@ -1,2 +1,2 @@
 <p class="center"><img src="images/common/icon-ubiquitous.png" alt="ユビキタス"></p>
-<p>MeetAppでは、スマートフォンからでも素早くスケジュール調整が可能。そのため、移動時間やちょっとした休憩時間に手軽に調整可できます。</p>
+<p>MeetAppでは、<b>スマートフォンからでも</b>素早くスケジュール調整が可能。そのため、移動時間やちょっとした休憩時間に手軽に調整可できます。</p>
