Update text of usage

--- a/app/partials/usage/time-selection.html
+++ b/app/partials/usage/time-selection.html
@@ -1,5 +1,5 @@
 <p class="center">
   <img src="images/common/icon-howto2.png" alt="予定を入力する">
 </p>
-<p>自分のニックネームとパスワードを入力したら、早速、独特で楽しいスワイプ操作で、自分の都合の良い時間帯に色をつけましょう</p>
-<p>みんなの予定を見たいときはタブを切り替えます。<br /><b>色の濃い場所が、より多くの人が参加できる時間となります。</b>その時間に参加できる人は、タップで確認することが出来ます。</p>
+<p>自分の名前とパスワードを入力し、自分の<b>都合の良い時間帯をスワイプ</b>して、色をつけましょう。</p>
+<p>色の濃い場所が、より多くの人が参加できる時間となります。</p>
