Update CSS of usage-boxes

--- a/app/styles/partials/_desktop.scss
+++ b/app/styles/partials/_desktop.scss
@@ -186,7 +186,7 @@ hr {
       height: 100px;
     }
     p {
-      font-color: 15px;
+      font-size: 19px;
       color: #535353;
       line-height: 1.4em;
       margin-top: 17px;
@@ -249,7 +249,7 @@ hr {
       height: 100px;
     }
     p {
-      font-color: 15px;
+      font-size: 18px;
       color: #535353;
       line-height: 1.4em;
       margin-top: 17px;
