--- a/app/partials/desktop/select-time/main.html
+++ b/app/partials/desktop/select-time/main.html
@@ -1,22 +1,26 @@
 <div class="time-output">
-  <div class="error" ng-show="timeContainer.dates.length > 0 && !timeContainer.hasValidTimes">すべての日付に対して<br>時間帯を選んで下さい</div>
-  <ng-switch on="selectable">
-  <p class="label" for="event-name" ng-switch-when="true">
+  <div
+    class="error"
+    ng-show="timeContainer.dates.length > 0 && !timeContainer.hasValidTimes">
+      すべての日付に対して
+      <br>
+      時間帯を選んで下さい
+  </div>
+  <p class="label" for="event-name" ng-if="selectable">
     <small>*</small>日時候補
   </p>
-  </ng-switch>
 
   <div ng-include src="'partials/desktop/select-time/time-select-control.html'"></div>
 
   <ng-switch on="scrollable">
-    <div
-      class="scroll-pane"
-      ng-include src="'partials/desktop/select-time/table.html'"
-      ng-switch-when="true">
+    <div ng-switch-when="true">
+      <div class="scroll-pane"
+        ng-include src="'partials/desktop/select-time/table.html'">
+      </div>
     </div>
-    <div
-      ng-include src="'partials/desktop/select-time/table.html'"
-      ng-switch-default>
+    <div ng-switch-default>
+      <div ng-include src="'partials/desktop/select-time/table.html'">
+      </div>
     </div>
   </ng-switch>
 
