Unify select time partials.

--- a/app/partials/desktop/header.html
+++ b/app/partials/desktop/header.html
@@ -1,5 +1,5 @@
 <header class="content">
-  <a ui-sref="home" fast-link>
+  <a ui-sref="home">
     <div class="logo">
       <img src="images/common/logo-white.png" alt="MeetApp">
     </div>
