Fix tabs in mobile event page.

--- a/app/partials/select-time/time-select-control.html
+++ b/app/partials/select-time/time-select-control.html
@@ -1,12 +1,12 @@
   <div ng-switch="datesNumber > daysPerPage">
     <div ng-switch-when="true" class="overnavi">
       <div class="overnavi-left"
-           fast-click="previousPage()"
+           ng-click="previousPage()"
            ng-disabled="page <= 1"
            ng-class="{disabled: page <= 1}">
       </div>
       <div class="overnavi-right"
-           fast-click="nextPage()"
+           ng-click="nextPage()"
            ng-disabled="page >= maxPage()"
            ng-class="{disabled: page >= maxPage()}">
       </div>
