--- a/app/partials/mobile/events/general.html
+++ b/app/partials/mobile/events/general.html
@@ -62,82 +62,98 @@
 
 <div class="clear"></div>
 
-<div class="input-area">
+<div class="input-area" ng-init="tab = 'display'">
 
   <div class="tabs">
-    <div class="tab-heatmap" ng-switch on="selectedUser">
+    <div
+      class="tab tab-heatmap"
+      ng-switch on="selectedUser"
+      ng-click="tab = 'display'"
+      ng-class="{active: tab == 'display'}"
+    >
       <p ng-switch-when="null">みんなの予定</p>
       <p ng-switch-default>{{selectedUser.name}}の予定</p>
     </div>
-    <div class="tab-input">
+    <div
+      class="tab tab-input"
+      ng-click="tab = 'input'"
+      ng-class="{active: tab == 'input'}"
+    >
       <p>自分の予定</p>
     </div>
   </div>
 
-<!--   <div class="input-schedule">
-    <div class="input-login">
-      <img src="images/mobile/pencil.png" alt="予定を入力する" class="pencil">
-      <table>
-        <tr>
-          <td colspan="2">
-            <h3>予定を入力する</h3>
-          </td>
-        </tr>
-        <tr>
-          <td colspan="2">
-            <hr>
-          </td>
-        </tr>
-        <tr>
-          <th>名前</th>
-          <td><input type="text"></td>
-        </tr>
-        <tr>
-          <th>パスワード</th>
-          <td><input type="text"></td>
-        </tr>
-        <tr>
-          <td colspan="2">
-            <button>
-              <p>決定</p>
-            </button>
-          </td>
-        </tr>
-      </table>
+  <ng-switch on="tab">
+    <div ng-switch-when="display">
+      <select-time selection-target="availabilities" class="heat-map" >
+      </select-time>
     </div>
-    <div class="input-login">
-      <img src="images/mobile/pencil.png" alt="予定を編集する" class="pencil">
-      <table>
-        <tr>
-          <td colspan="2">
-            <h3>予定を編集する</h3>
-          </td>
-        </tr>
-        <tr>
-          <td colspan="2">
-            <hr>
-          </td>
-        </tr>
-        <tr>
-          <th>名前</th>
-          <td><select name="" id=""></select></td>
-        </tr>
-        <tr>
-          <th>パスワード</th>
-          <td><input type="text"></td>
-        </tr>
-        <tr>
-          <td colspan="2">
-            <button>
-              <p>決定</p>
-            </button>
-          </td>
-        </tr>
-      </table>
+    <div ng-switch-when="input">
+      <div class="input-schedule">
+        <div class="input-login">
+          <img src="images/mobile/pencil.png" alt="予定を入力する" class="pencil">
+          <table>
+            <tr>
+              <td colspan="2">
+                <h3>予定を入力する</h3>
+              </td>
+            </tr>
+            <tr>
+              <td colspan="2">
+                <hr>
+              </td>
+            </tr>
+            <tr>
+              <th>名前</th>
+              <td><input type="text"></td>
+            </tr>
+            <tr>
+              <th>パスワード</th>
+              <td><input type="text"></td>
+            </tr>
+            <tr>
+              <td colspan="2">
+                <button>
+                  <p>決定</p>
+                </button>
+              </td>
+            </tr>
+          </table>
+        </div>
+        <div class="input-login">
+          <img src="images/mobile/pencil.png" alt="予定を編集する" class="pencil">
+          <table>
+            <tr>
+              <td colspan="2">
+                <h3>予定を編集する</h3>
+              </td>
+            </tr>
+            <tr>
+              <td colspan="2">
+                <hr>
+              </td>
+            </tr>
+            <tr>
+              <th>名前</th>
+              <td><select name="" id=""></select></td>
+            </tr>
+            <tr>
+              <th>パスワード</th>
+              <td><input type="text"></td>
+            </tr>
+            <tr>
+              <td colspan="2">
+                <button>
+                  <p>決定</p>
+                </button>
+              </td>
+            </tr>
+          </table>
+        </div>
+      </div>
     </div>
- -->
-    <select-time selection-target="availabilities" class="heat-map">
-    </select-time>
+
+
   </div>
 
 <!--   <div class="area-selected">
