Fix mobile confirmation page.

--- a/app/partials/mobile/create-event/confirmation.html
+++ b/app/partials/mobile/create-event/confirmation.html
@@ -67,6 +67,6 @@
 
 <div class="gide-arrow"></div>
 
-<div class="btn-goinput">
+<div class="btn-goinput" ng-click="gotoInput()">
   <p>自分の予定を入力する</p>
 </div>
